login,logout,singup,changepass,crud profile

--- a/BE/.env
+++ b/BE/.env
@@ -4,3 +4,18 @@ MONGO_URI=mongodb://localhost:27017/inhere
 # Server Configuration
 PORT=9000
 NODE_ENV=development
+
+# Auth
+JWT_SECRET=inhere_dev_secret_change_me
+JWT_EXPIRES_IN=7d
+
+# Seed Owner Account
+OWNER_NAME=System Owner
+OWNER_EMAIL=owner@inhere.local
+OWNER_PHONE=0900000000
+OWNER_PASSWORD=ChangeMe123!
+
+# Cloudinary (Avatar Upload)
+CLOUDINARY_CLOUD_NAME=dgmcfghuz
+CLOUDINARY_API_KEY=315967333975143
+CLOUDINARY_API_SECRET=_AchsBB59f0m4mguy-9pMcAC3jQ
