fix singup, logingg

--- a/BE/.env
+++ b/BE/.env
@@ -8,6 +8,7 @@ NODE_ENV=development
 # Auth
 JWT_SECRET=inhere_dev_secret_change_me
 JWT_EXPIRES_IN=7d
+GOOGLE_CLIENT_ID=725800898290-ule06sq0s6omm64qf5umlhb4ron7kfj9.apps.googleusercontent.com
 
 # Seed Owner Account
 OWNER_NAME=System Owner
