--- a/BE/package.json
+++ b/BE/package.json
@@ -15,11 +15,12 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.7.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "mongoose": "^9.1.5",
-    "cors": "^2.8.5",
+    "google-auth-library": "^10.5.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^9.1.5",
     "multer": "^2.0.2"
   },
   "devDependencies": {
