--- a/FE/.env
+++ b/FE/.env
@@ -1,2 +1,3 @@
 # Environment variables
 VITE_API_BASE_URL=http://localhost:9000/api
+VITE_GOOGLE_CLIENT_ID=725800898290-ule06sq0s6omm64qf5umlhb4ron7kfj9.apps.googleusercontent.com
