forgotpass, rspass,gmail

--- a/BE/.env
+++ b/BE/.env
@@ -20,3 +20,17 @@ OWNER_PASSWORD=ChangeMe123!
 CLOUDINARY_CLOUD_NAME=dgmcfghuz
 CLOUDINARY_API_KEY=315967333975143
 CLOUDINARY_API_SECRET=_AchsBB59f0m4mguy-9pMcAC3jQ
+
+# Frontend URL (for password reset link)
+FRONTEND_URL=http://localhost:3000
+
+# SMTP (Forgot Password)
+# Required (Gmail + App Password)
+SMTP_USER=ducgioibvb@gmail.com
+SMTP_PASS=pjldjbmnwvkdznka
+
+# Optional (if omitted, system uses Gmail defaults)
+# SMTP_HOST=smtp.gmail.com
+# SMTP_PORT=587
+# SMTP_SECURE=false
+# SMTP_FROM=INHERE <your_gmail@gmail.com>
