homepage + product list

--- a/BE/.env
+++ b/BE/.env
@@ -1,5 +1,5 @@
 # MongoDB Connection
-MONGO_URI=mongodb://localhost:27017/inhere
+MONGODB_URI=mongodb://localhost:27017/inhere
 
 # Server Configuration
 PORT=9000
