--- a/BE/package.json
+++ b/BE/package.json
@@ -13,12 +13,12 @@
   },
   "keywords": [],
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "mongoose": "^9.1.5",
-    "cors": "^2.8.5"
+    "mongoose": "^9.1.5"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.11"
   }
 }
