--- a/BE/package.json
+++ b/BE/package.json
@@ -8,25 +8,17 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "keywords": [],
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "exceljs": "^4.4.0",
     "express": "^5.2.1",
-    "google-auth-library": "^10.5.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^9.1.5",
-    "multer": "^2.0.2",
-    "nodemailer": "^8.0.1",
-    "xlsx": "^0.18.5"
+    "mongoose": "^9.1.5"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.11"
   }
 }
